--- a/public/index.html
+++ b/public/index.html
@@ -540,7 +540,10 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-bold mb-4 text-yellow-400">CREAS Vigia de Nazaré </h3>
-                    <p class="text-gray-400">Centro de Referência Especializado de Assistência Social no combate à violência doméstica e familiar.</p>
+                    <p class="text-gray-400">é um serviço público que ajuda pessoas e famílias que estão passando por 
+                        dificuldades ou tiveram seus direitos desrespeitados. Lá, a equipe oferece apoio psicológico, 
+                        social e orientação para lidar com situações como violência, abandono, maus-tratos ou outras 
+                        formas de risco. O objetivo é proteger, orientar e fortalecer a família e a comunidade, garantindo mais segurança e cidadania.</p>
                 </div>
                 <div>
                     <h4 class="font-bold mb-4">Links Rápidos</h4>
