--- a/public/index.html
+++ b/public/index.html
@@ -546,13 +546,13 @@
                         formas de risco. O objetivo é proteger, orientar e fortalecer a família e a comunidade, garantindo mais segurança e cidadania.</p>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Links Rápidos</h4>
+                    <h3 class="text-xl font-bold mb-4 text-yellow-400">Links Úteis</h3>
                     <ul class="space-y-2">
-                        <li><a href="#servicos" class="text-gray-400 hover:text-white transition">Serviços</a></li>
-                        <li><a href="#apoio" class="text-gray-400 hover:text-white transition">Apoio</a></li>
+                        <li><a href="https://vigia.pa.gov.br/" class="text-gray-400 hover:text-white transition">Prefeitura Municipal de Viggia</a></li>
+                        <li><a href="https://conselhotutelarvigia.vercel.app/" class="text-gray-400 hover:text-white transition">Conselho Tutelar de Vigia</a></li>
                         <li><a href="#localizacao" class="text-gray-400 hover:text-white transition">Localização</a></li>
                         <li><a href="#parceiros" class="text-gray-400 hover:text-white transition">Parceiros</a></li>
-                        <li><a href="#denuncia" class="text-gray-400 hover:text-white transition">Denúncia</a></li>
+                        <li><a href="#denuncia.html" class="text-gray-400 hover:text-white transition">Denúncia</a></li>
                     </ul>
                 </div>
                 <div>
@@ -560,15 +560,11 @@
                     <ul class="space-y-2 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-map-marker-alt mt-1 mr-2 text-yellow-400"></i>
-                            <span>Rua Principal, 123 - Centro, Vigia de Nazaré - PA</span>
-                        </li>
-                        <li class="flex items-start">
-                            <i class="fas fa-phone-alt mt-1 mr-2 text-yellow-400"></i>
-                            <span>(91) 1234-5678</span>
+                            <span>Av Santana de Medeiros, 321 - Arapiranga Vigia de Nazaré - PA</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1 mr-2 text-yellow-400"></i>
-                            <span>craes.vigia@assistenciasocial.pa.gov.br</span>
+                            <span>creasvigiadenazare@gmail.com</span>
                         </li>
                     </ul>
                 </div>
