--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
             <img src="https://img.freepik.com/fotos-premium/pinos-de-madeira-com-coracoes-coloridos-no-fundo-rosa-decoracoes-de-top-view-para-o-dia-dos-namorados_1048944-22625228.jpg?semt=ais_hybrid&w=740&q=80" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4">
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
-                    <span class="block mb-2"><strong>Apoio psicológico, orientação jurídica e capacitação</strong></span>
+                    <span class="block mb-2"><strong>Apoio psicológico e orientação jurídica</strong></span>
                     <span class="block text-base md:text-xl font-normal">Conheça nossos serviços e saiba como podemos ajudar a reconstruir sua vida</span>
                 </div>
             </div>
