--- a/public/index.html
+++ b/public/index.html
@@ -569,20 +569,8 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Redes Sociais</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="bg-gray-800 w-10 h-10 rounded-full flex items-center justify-center hover:bg-purple-700 transition">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="bg-gray-800 w-10 h-10 rounded-full flex items-center justify-center hover:bg-purple-700 transition">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="bg-gray-800 w-10 h-10 rounded-full flex items-center justify-center hover:bg-purple-700 transition">
-                            <i class="fab fa-whatsapp"></i>
-                        </a>
-                    </div>
+                    <h4 class="font-bold mb-4">Disque Denúncias</h4>
                     <div class="mt-6">
-                        <h4 class="font-bold mb-2">Disque Denúncia</h4>
                         <div class="bg-red-600 text-white px-3 py-1 rounded-full inline-block">
                             <i class="fas fa-phone mr-1"></i> 180
                         </div>
@@ -590,7 +578,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500">
-                <p>© 2025 Conselho Tutelar de Vigia/PA - Projeto de ensino extensionista</p>
+                <p>© 2025 CREAS Vigia/PA - Projeto de ensino extensionista</p>
                 <p class="mt-2 text-sm">Desenvolvido por <strong>José Airton Borges de Souza Junior</strong>  - Estudante de Análise e Desenvolvimento de Sistemas - UNIASSENVI - fone:(91)983252639</p>
             </div>
         </div>
