--- a/public/index.html
+++ b/public/index.html
@@ -62,41 +62,76 @@
     </style>
 </head>
 <body class="font-sans bg-gray-50 pt-24">
-  <header class="bg-white text-gray-800 shadow-lg fixed top-0 left-0 right-0 z-50">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <div class="flex items-center space-x-2">
-            <img src="https://i.imgur.com/pBVZXnc.png" alt="Logo" class="w-40 h-20 object-contain">
-            <div>
-                <h1 class="text-xl font-bold">CREAS Vigia de Nazaré</h1>
-                <p class="text-xs text-gray-600">Centro de Referência Especializado de Assistência Social</p>
-            </div>
-        </div>
-        <nav class="hidden md:block">
-            <ul class="flex items-center space-x-8">
-                <li><a href="#blog" class="hover:text-red-700 transition">Conteudo<br> Educativo</a></li>
-                <li><a href="#apoio" class="hover:text-red-700 transition">Ajuda</a></li>
-                <li><a href="#emergency-contacts" class="hover:text-red-700 transition">Emergência</a></li>
-                <li><a href="#localizacao" class="hover:text-red-700 transition">Localização</a></li>
-                <li><a href="#parceiros" class="hover:text-red-700 transition">Parceiros</a></li>
-                <li class="flex items-center space-x-4">
-                    <a href="denuncia.html" class="bg-red-700 text-white font-bold px-6 py-2 rounded-lg hover:bg-red-600 transition transform hover:scale-105">FAZER DENÚNCIA</a>
-                    <a href="#servicos" class="bg-transparent border-2 border-red-700 text-red-700 font-bold px-6 py-2 rounded-lg hover:bg-red-700 hover:text-white transition">CONHEÇA NOSSOS SERVIÇOS</a>
-                </li>
-            </ul>
-        </nav>
-        <button class="md:hidden text-2xl">
-            <i class="fas fa-bars"></i>
-        </button>
+<header class="bg-white text-gray-800 shadow-lg fixed top-0 left-0 right-0 z-50">
+  <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="flex items-center space-x-2">
+      <img src="https://i.imgur.com/pBVZXnc.png" alt="Logo" class="w-40 h-20 object-contain">
+      <div>
+        <h1 class="text-xl font-bold">CREAS Vigia de Nazaré</h1>
+        <p class="text-xs text-gray-600">Centro de Referência Especializado de Assistência Social</p>
+      </div>
     </div>
+
+    <nav class="hidden md:block">
+      <ul class="flex items-center space-x-8">
+        <li><a href="#blog" class="hover:text-red-700 transition">Conteudo<br> Educativo</a></li>
+        <li><a href="#apoio" class="hover:text-red-700 transition">Ajuda</a></li>
+        <li><a href="#emergency-contacts" class="hover:text-red-700 transition">Emergência</a></li>
+        <li><a href="#localizacao" class="hover:text-red-700 transition">Localização</a></li>
+        <li><a href="#parceiros" class="hover:text-red-700 transition">Parceiros</a></li>
+        <li class="flex items-center space-x-4">
+          <a href="#servicos" class="bg-transparent border-2 border-red-700 text-red-700 font-bold px-6 py-2 rounded-lg hover:bg-red-700 hover:text-white transition">CONHEÇA NOSSOS SERVIÇOS</a>
+        </li>
+      </ul>
+    </nav>
+
+    <button class="md:hidden text-2xl" id="mobile-menu-button">
+      <i class="fas fa-bars"></i>
+    </button>
+  </div>
+
+  <div id="mobile-menu" class="hidden md:hidden absolute top-0 left-0 w-full h-screen bg-white bg-opacity-95 p-6 transition-transform transform duration-300 ease-in-out -translate-y-full">
+    <div class="flex justify-end mb-4">
+      <button id="close-menu-button" class="text-3xl text-gray-800">&times;</button>
+    </div>
+    <nav class="flex flex-col items-center space-y-4">
+      <a href="#blog" class="block w-full text-center text-xl text-gray-800 py-2 hover:bg-gray-100 rounded-md transition">Conteudo Educativo</a>
+      <a href="#apoio" class="block w-full text-center text-xl text-gray-800 py-2 hover:bg-gray-100 rounded-md transition">Ajuda</a>
+      <a href="#emergency-contacts" class="block w-full text-center text-xl text-gray-800 py-2 hover:bg-gray-100 rounded-md transition">Emergência</a>
+      <a href="#localizacao" class="block w-full text-center text-xl text-gray-800 py-2 hover:bg-gray-100 rounded-md transition">Localização</a>
+      <a href="#parceiros" class="block w-full text-center text-xl text-gray-800 py-2 hover:bg-gray-100 rounded-md transition">Parceiros</a>
+      <a href="denuncia.html" class="block w-full text-center bg-red-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-red-600 transition transform hover:scale-105 mt-4">FAZER DENÚNCIA</a>
+      <a href="#servicos" class="block w-full text-center bg-transparent border-2 border-red-700 text-red-700 font-bold px-6 py-3 rounded-lg hover:bg-red-700 hover:text-white transition">CONHEÇA NOSSOS SERVIÇOS</a>
+    </nav>
+  </div>
 </header>
-  <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const header = document.querySelector('header');
-        if (header) {
-            header.classList.add('header-fade-in');
-        }
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const header = document.querySelector('header');
+    if (header) {
+      header.classList.add('header-fade-in');
+    }
+
+    // Funcionalidade do menu responsivo
+    const mobileMenuButton = document.getElementById('mobile-menu-button');
+    const closeMenuButton = document.getElementById('close-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    mobileMenuButton.addEventListener('click', () => {
+      mobileMenu.classList.remove('hidden');
+      setTimeout(() => {
+        mobileMenu.classList.remove('-translate-y-full');
+      }, 10);
     });
-  </script>
+
+    closeMenuButton.addEventListener('click', () => {
+      mobileMenu.classList.add('-translate-y-full');
+      setTimeout(() => {
+        mobileMenu.classList.add('hidden');
+      }, 300); // tempo para a animação de transição terminar
+    });
+  });
+</script>
 
 <!--SLIDE 1-->
     <div class="slideshow-container relative w-full h-96 overflow-hidden">
@@ -106,6 +141,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2">Você não está sozinha</strong>.</span>
                     <span class="block text-base md:text-xl font-normal">Oferecemos apoio, sigilo e um novo caminho para a liberdade</span>
+                    <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -117,6 +156,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Denuncie abusos contra a Criança e o Adolescente</strong>.</span>
                     <span class="block text-base md:text-xl font-normal">Através do site:<br> www.conselhotutelarvigia.vercel.app</span>
+               <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -128,6 +171,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Em caso de emergência, não hesite! Disque 180</strong></span>
                     <span class="block text-base md:text-xl font-normal">(Central de Atendimento à Mulher) e 190 (Polícia Militar)</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -139,6 +186,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Apoio psicológico e orientação jurídica</strong></span>
                     <span class="block text-base md:text-xl font-normal">Conheça nossos serviços e saiba como podemos ajudar a reconstruir sua vida</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -150,6 +201,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>A violência não tem idade.</strong></span>
                     <span class="block text-base md:text-xl font-normal">Proteja nossas crianças e adolescentes. Denuncie qualquer tipo de abuso e negligência</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -161,6 +216,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Reconheça o ciclo da violência e saia dele</strong></span>
                     <span class="block text-base md:text-xl font-normal">Ameaças, explosão e 'lua de mel' não são amor, são sinais de alerta. Quebre o ciclo, mude a sua história!</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -171,6 +230,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Homem, você também pode ser uma vítima.</strong></span>
                     <span class="block text-base md:text-xl font-normal">Nossos serviços estão aqui para te apoiar. Você não está sozinho</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -181,6 +244,10 @@
                 <div class="text-white text-center text-2xl md:text-3xl lg:text-4xl font-bold leading-tight max-w-2xl mx-auto">
                     <span class="block mb-2"><strong>Proteja a dignidade de quem construiu o nosso futuro.</strong></span>
                     <span class="block text-base md:text-xl font-normal">A violência contra a pessoa idosa é crime. Denuncie!</span>
+                <br>
+                    <a href="denuncia.html" class="bg-red-700 text-white font-bold py-4 px-8 rounded-full shadow-lg hover:bg-red-600 transition transform hover:scale-105 animate-pulse">
+                    Denuncie AGORA !
+                    </a>
                 </div>
             </div>
         </div>
@@ -196,7 +263,9 @@
             <span class="dot cursor-pointer h-3 w-3 bg-red-700 rounded-full transition-all duration-300 hover:bg-white"></span>
             <span class="dot cursor-pointer h-3 w-3 bg-red-700 rounded-full transition-all duration-300 hover:bg-white"></span>
         </div>
+
     </div>
+
 
     <script>
         let slideIndex = 0;
@@ -540,9 +609,9 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-bold mb-4 text-yellow-400">CREAS Vigia de Nazaré </h3>
-                    <p class="text-gray-400">é um serviço público que ajuda pessoas e famílias que estão passando por 
-                        dificuldades ou tiveram seus direitos desrespeitados. Lá, a equipe oferece apoio psicológico, 
-                        social e orientação para lidar com situações como violência, abandono, maus-tratos ou outras 
+                    <p class="text-gray-400">é um serviço público que ajuda pessoas e famílias que estão passando por
+                        dificuldades ou tiveram seus direitos desrespeitados. Lá, a equipe oferece apoio psicológico,
+                        social e orientação para lidar com situações como violência, abandono, maus-tratos ou outras
                         formas de risco. O objetivo é proteger, orientar e fortalecer a família e a comunidade, garantindo mais segurança e cidadania.</p>
                 </div>
                 <div>
@@ -610,5 +679,6 @@
             once: true,
         });
     </script>
+
 </body>
 </html>
